CSSを調整し、テスト用に読書フォルダのindex.mdを編集しました。

--- a/custom-css-test.html
+++ b/custom-css-test.html
@@ -16,9 +16,9 @@
       
 
       <link rel="stylesheet" type="text/css" href="custom.css?ver=2" />
-      <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+      <link href="https://use.fontawesome.com/releases/v6.7.2/css/all.css" rel="stylesheet">
 
-<h2 id="このサイトについて">このサイトについて</h2>
+<h2 id="このサイトについて">沼田 哲史のノート　　<i class="fa-solid fa-feather-pointed"></i> このサイトについて</h2>
 
 <p>このサイトでは、沼田が授業時間だけでは語りきれない思考法や学習法、そして人生全般にわたる話題をエッセイ風に共有していきます。</p>
 
